objects/CPO__c.object
<CustomObject>
    <description>Campaign Partner Opportunity</description>
    <fields>
        <fullName>Campaign_Partner__c</fullName>
        <description>Master Detail to Campaign Partner</description>
        <label>Campaign Partner</label>
        <referenceTo>Campaign_Partner__c</referenceTo>
        <relationshipLabel>CPOs</relationshipLabel>
        <relationshipName>CPOs</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Look up to Campaign</description>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>CPOs</relationshipLabel>
        <relationshipName>CPOs</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <description>Opportunity is master here</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>CPOs</relationshipLabel>
        <relationshipName>CPOs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Partner__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Look up to Partner Accounts</description>
        <label>Partner</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>CPOs</relationshipLabel>
        <relationshipName>CPOs</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>CPO</label>
    <nameField>
        <label>CPO Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CPOs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>